<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_item_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".fragments.homepage.movies.MovieElementActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/bg_toolbar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/movie_item_activity_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                style="@style/TextStyleToolBarHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/movie_info" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/movie_title_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blackColor"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_toolbar"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_TextView">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="150dp"
                    android:layout_height="210dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title_TextView">

                    <ImageView
                        android:id="@+id/poster_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/element_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/genre_RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        app:fastScrollEnabled="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/released_date_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/blackColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/genre_RecyclerView" />

                    <TextView
                        android:id="@+id/movie_runtime_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/blackColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/released_date_TextView" />

                    <TextView
                        android:id="@+id/movie_status_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/blackColor"
                        app:layout_constraintBaseline_toBaselineOf="@id/add_my_watch_list_Button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_runtime_TextView" />

                    <ImageButton
                        android:id="@+id/add_my_watch_list_Button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/bg_round_button_1"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/icon_add_1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/overview_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                android:textColor="@color/blackColor"
                android:textSize="13sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/movie_overview_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:justificationMode="inter_word"
                android:maxLines="2"
                android:textColor="@color/blackColor"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/production_companies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview_TextView" />

            <LinearLayout
                android:id="@+id/videos_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/bg_toolbar"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/production_companies_recycler_view">

                <TextView
                    android:id="@+id/textView_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/trailer_and_clips"
                    android:textColor="@color/blackColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/videos_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cast_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/bg_toolbar"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videos_LinearLayout">

                <TextView
                    android:id="@+id/textView_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/top_billed_cast"
                    android:textColor="@color/blackColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/recommendations_movies_LinearLayout"
                style="@style/HomePage.LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_LinearLayout">

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5">

                    <TextView
                        style="@style/HomePage.TextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/recommended_movies" />
                </androidx.cardview.widget.CardView>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommendations_movies_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/similar_movies_LinearLayout"
                style="@style/HomePage.LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendations_movies_LinearLayout">

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5">

                    <TextView
                        style="@style/HomePage.TextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/similar_movies" />
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similar_movies_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
