<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.homepage.movies.MoviesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/now_playing_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />
        </LinearLayout>

        <LinearLayout
            style="@style/HomePage.LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="7dp">

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        style="@style/HomePage.TextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/trending_movies_title" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/view_all_button_trending_movies"
                        style="@style/HomePage.ButtonViewStyle"
                        android:layout_width="75dp"
                        android:layout_height="35dp"
                        android:text="@string/view_all" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />
        </LinearLayout>

        <LinearLayout
            style="@style/HomePage.LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="7dp">

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        style="@style/HomePage.TextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/popular_movies_title" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/view_all_button_popular_movies"
                        style="@style/HomePage.ButtonViewStyle"
                        android:layout_width="75dp"
                        android:layout_height="35dp"
                        android:text="@string/view_all" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />
        </LinearLayout>

        <LinearLayout
            style="@style/HomePage.LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="7dp">

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        style="@style/HomePage.TextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/upcoming_movies_title" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/HomePage.CardViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/view_all_button_upcoming_movies"
                        style="@style/HomePage.ButtonViewStyle"
                        android:layout_width="75dp"
                        android:layout_height="35dp"
                        android:text="@string/view_all" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcoming_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>